--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,7 +87,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        android:text="*"
+        android:text="x"
         android:textSize="10pt"
         app:layout_constraintEnd_toStartOf="@+id/btnBagi"
         app:layout_constraintTop_toBottomOf="@+id/etAngka2" />
